k8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-web-app-again
  labels:
    app: go-web-app-again
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-web-app-again
  template:
    metadata:
      labels:
        app: go-web-app-again
    spec:
      containers:
      - name: go-web-app-again
        image: aradhyadocker17/webapp-again:v1
        ports:
        - containerPort: 8080
