k8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-again
spec:
  selector:
    app: go-web-app-again
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
